# tokki

./: .gitignore
.github/: CODEOWNERS
.github/agents/: rust.agent.md
scripts/github/: Set-MainBranchProtection.ps1
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  runtime.rs
src-tauri/src/engine/: behavior.rs
src-tauri/src/llm/: client.rs  memory.rs  mod.rs  models.rs
src/animation/: mapActionToView.test.ts  mapActionToView.ts
src/bridge/: tauri.ts
src/components/tokki/: AvatarPicker.tsx  ChatBubble.tsx  ChatInput.tsx  TokkiAvatarAsset.tsx  TokkiCharacter.tsx
src/state/: useTokkiStore.ts
src/types/: tokki.ts
tests/e2e/: tokki.spec.ts
