[package]
name = "tokki"
version = "0.1.0"
description = "Tokki desktop character runtime"
authors = ["tokki"]
edition = "2021"

[lib]
name = "tokki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
