[package]
name = "tokki"
version = "0.1.0"
description = "Tokki desktop character runtime"
authors = ["tokki"]
edition = "2021"

[lib]
name = "tokki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
